answer/Compilers-main/lab2/Lab/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error ExtDef
    8       | error CompSt
    9       | error SEMI
   10       | Specifier error SEMI
   11       | Specifier error CompSt

   12 ExtDecList: VarDec
   13           | VarDec COMMA ExtDecList

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag
   18                | STRUCT OptTag LC DefList error RC

   19 OptTag: ID
   20       | ε

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC

   30 StmtList: Stmt StmtList
   31         | ε

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI
   39     | error Stmt
   40     | Exp error
   41     | IF LP error RP Stmt
   42     | IF LP error RP Stmt ELSE Stmt
   43     | WHILE LP error RP Stmt

   44 DefList: Def DefList
   45        | ε

   46 Def: Specifier DecList SEMI
   47    | Specifier DecList error SEMI
   48    | Specifier error SEMI

   49 DecList: Dec
   50        | Dec COMMA DecList

   51 Dec: VarDec
   52    | VarDec ASSIGNOP Exp

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT
   71    | Exp ASSIGNOP error
   72    | Exp AND error
   73    | Exp OR error
   74    | Exp RELOP error
   75    | Exp PLUS error
   76    | Exp MINUS error
   77    | Exp STAR error
   78    | Exp DIV error
   79    | LP error RP
   80    | LP Exp error
   81    | MINUS error
   82    | NOT error
   83    | ID LP error RP
   84    | Exp LB error RB

   85 Args: Exp COMMA Args
   86     | Exp
   87     | error COMMA Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 10 11 18 38 39 40 41 42 43 47 48 71 72 73 74 75 76 77 78 79 80 81 82 83 84 87
    INT <node> (258) 23 69
    FLOAT <node> (259) 70
    ID <node> (260) 19 21 22 24 25 64 65 67 68 83
    SEMI <node> (261) 4 5 9 10 32 34 38 46 47 48
    COMMA <node> (262) 13 26 50 85 87
    DOT <node> (263) 67
    ASSIGNOP <node> (264) 52 53 71
    RELOP <node> (265) 56 74
    PLUS <node> (266) 57 75
    MINUS <node> (267) 58 62 76 81
    STAR <node> (268) 59 77
    DIV <node> (269) 60 78
    AND <node> (270) 54 72
    OR <node> (271) 55 73
    NOT <node> (272) 63 82
    LP <node> (273) 24 25 35 36 37 41 42 43 61 64 65 79 80 83
    RP <node> (274) 24 25 35 36 37 41 42 43 61 64 65 79 83
    LB <node> (275) 23 66 84
    RB <node> (276) 23 66 84
    LC <node> (277) 16 18 29
    RC <node> (278) 16 18 29
    TYPE <node> (279) 14
    STRUCT <node> (280) 16 17 18
    RETURN <node> (281) 34
    IF <node> (282) 35 36 41 42
    ELSE <node> (283) 36 42
    WHILE <node> (284) 37 43
    UMINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (35)
        on left: 4 5 6 7 8 9 10 11
        on right: 2 7
    ExtDecList <node> (36)
        on left: 12 13
        on right: 4 13
    Specifier <node> (37)
        on left: 14 15
        on right: 4 5 6 10 11 28 46 47 48
    StructSpecifier <node> (38)
        on left: 16 17 18
        on right: 15
    OptTag <node> (39)
        on left: 19 20
        on right: 16 18
    Tag <node> (40)
        on left: 21
        on right: 17
    VarDec <node> (41)
        on left: 22 23
        on right: 12 13 23 28 51 52
    FunDec <node> (42)
        on left: 24 25
        on right: 6
    VarList <node> (43)
        on left: 26 27
        on right: 24 26
    ParamDec <node> (44)
        on left: 28
        on right: 26 27
    CompSt <node> (45)
        on left: 29
        on right: 6 8 11 33
    StmtList <node> (46)
        on left: 30 31
        on right: 29 30
    Stmt <node> (47)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 30 35 36 37 39 41 42 43
    DefList <node> (48)
        on left: 44 45
        on right: 16 18 29 44
    Def <node> (49)
        on left: 46 47 48
        on right: 44
    DecList <node> (50)
        on left: 49 50
        on right: 46 47 50
    Dec <node> (51)
        on left: 51 52
        on right: 49 50
    Exp <node> (52)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
        on right: 32 34 35 36 37 40 52 53 54 55 56 57 58 59 60 61 62 63 66 67 71 72 73 74 75 76 77 78 80 84 85 86 87
    Args <node> (53)
        on left: 85 86 87
        on right: 64 85


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • ExtDef
    8       | error • CompSt
    9       | error • SEMI

    error   shift, and go to state 1
    SEMI    shift, and go to state 9
    LC      shift, and go to state 10
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    ExtDef           go to state 11
    Specifier        go to state 7
    StructSpecifier  go to state 8
    CompSt           go to state 12


State 2

   14 Specifier: TYPE •

    $default  reduce using rule 14 (Specifier)


State 3

   16 StructSpecifier: STRUCT • OptTag LC DefList RC
   17                | STRUCT • Tag
   18                | STRUCT • OptTag LC DefList error RC

    ID  shift, and go to state 13

    $default  reduce using rule 20 (OptTag)

    OptTag  go to state 14
    Tag     go to state 15


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 17
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
   10       | Specifier • error SEMI
   11       | Specifier • error CompSt

    error  shift, and go to state 18
    ID     shift, and go to state 19
    SEMI   shift, and go to state 20

    ExtDecList  go to state 21
    VarDec      go to state 22
    FunDec      go to state 23


State 8

   15 Specifier: StructSpecifier •

    $default  reduce using rule 15 (Specifier)


State 9

    9 ExtDef: error SEMI •

    $default  reduce using rule 9 (ExtDef)


State 10

   29 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 45 (DefList)

    Specifier        go to state 24
    StructSpecifier  go to state 8
    DefList          go to state 25
    Def              go to state 26


State 11

    7 ExtDef: error ExtDef •

    $default  reduce using rule 7 (ExtDef)


State 12

    8 ExtDef: error CompSt •

    $default  reduce using rule 8 (ExtDef)


State 13

   19 OptTag: ID •
   21 Tag: ID •

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


State 14

   16 StructSpecifier: STRUCT OptTag • LC DefList RC
   18                | STRUCT OptTag • LC DefList error RC

    LC  shift, and go to state 27


State 15

   17 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 17 (StructSpecifier)


State 16

    0 $accept: Program $end •

    $default  accept


State 17

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 18

   10 ExtDef: Specifier error • SEMI
   11       | Specifier error • CompSt

    SEMI  shift, and go to state 28
    LC    shift, and go to state 10

    CompSt  go to state 29


State 19

   22 VarDec: ID •
   24 FunDec: ID • LP VarList RP
   25       | ID • LP RP

    LP  shift, and go to state 30

    $default  reduce using rule 22 (VarDec)


State 20

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 21

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 31


State 22

   12 ExtDecList: VarDec •
   13           | VarDec • COMMA ExtDecList
   23 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 32
    LB     shift, and go to state 33

    $default  reduce using rule 12 (ExtDecList)


State 23

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 10

    CompSt  go to state 34


State 24

   46 Def: Specifier • DecList SEMI
   47    | Specifier • DecList error SEMI
   48    | Specifier • error SEMI

    error  shift, and go to state 35
    ID     shift, and go to state 36

    VarDec   go to state 37
    DecList  go to state 38
    Dec      go to state 39


State 25

   29 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 40
    INT     shift, and go to state 41
    FLOAT   shift, and go to state 42
    ID      shift, and go to state 43
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45
    LP      shift, and go to state 46
    LC      shift, and go to state 10
    RETURN  shift, and go to state 47
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 50
    StmtList  go to state 51
    Stmt      go to state 52
    Exp       go to state 53


State 26

   44 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 45 (DefList)

    Specifier        go to state 24
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 26


State 27

   16 StructSpecifier: STRUCT OptTag LC • DefList RC
   18                | STRUCT OptTag LC • DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 45 (DefList)

    Specifier        go to state 24
    StructSpecifier  go to state 8
    DefList          go to state 55
    Def              go to state 26


State 28

   10 ExtDef: Specifier error SEMI •

    $default  reduce using rule 10 (ExtDef)


State 29

   11 ExtDef: Specifier error CompSt •

    $default  reduce using rule 11 (ExtDef)


State 30

   24 FunDec: ID LP • VarList RP
   25       | ID LP • RP

    RP      shift, and go to state 56
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 57
    StructSpecifier  go to state 8
    VarList          go to state 58
    ParamDec         go to state 59


State 31

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 32

   13 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 60
    VarDec      go to state 22


State 33

   23 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 61


State 34

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 35

   48 Def: Specifier error • SEMI

    SEMI  shift, and go to state 62


State 36

   22 VarDec: ID •

    $default  reduce using rule 22 (VarDec)


State 37

   23 VarDec: VarDec • LB INT RB
   51 Dec: VarDec •
   52    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 63
    LB        shift, and go to state 33

    $default  reduce using rule 51 (Dec)


State 38

   46 Def: Specifier DecList • SEMI
   47    | Specifier DecList • error SEMI

    error  shift, and go to state 64
    SEMI   shift, and go to state 65


State 39

   49 DecList: Dec •
   50        | Dec • COMMA DecList

    COMMA  shift, and go to state 66

    $default  reduce using rule 49 (DecList)


State 40

   38 Stmt: error • SEMI
   39     | error • Stmt

    error   shift, and go to state 40
    INT     shift, and go to state 41
    FLOAT   shift, and go to state 42
    ID      shift, and go to state 43
    SEMI    shift, and go to state 67
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45
    LP      shift, and go to state 46
    LC      shift, and go to state 10
    RETURN  shift, and go to state 47
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49

    CompSt  go to state 50
    Stmt    go to state 68
    Exp     go to state 53


State 41

   69 Exp: INT •

    $default  reduce using rule 69 (Exp)


State 42

   70 Exp: FLOAT •

    $default  reduce using rule 70 (Exp)


State 43

   64 Exp: ID • LP Args RP
   65    | ID • LP RP
   68    | ID •
   83    | ID • LP error RP

    LP  shift, and go to state 69

    $default  reduce using rule 68 (Exp)


State 44

   62 Exp: MINUS • Exp
   81    | MINUS • error

    error  shift, and go to state 70
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 71


State 45

   63 Exp: NOT • Exp
   82    | NOT • error

    error  shift, and go to state 72
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 73


State 46

   61 Exp: LP • Exp RP
   79    | LP • error RP
   80    | LP • Exp error

    error  shift, and go to state 74
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 75


State 47

   34 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 76


State 48

   35 Stmt: IF • LP Exp RP Stmt
   36     | IF • LP Exp RP Stmt ELSE Stmt
   41     | IF • LP error RP Stmt
   42     | IF • LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 77


State 49

   37 Stmt: WHILE • LP Exp RP Stmt
   43     | WHILE • LP error RP Stmt

    LP  shift, and go to state 78


State 50

   33 Stmt: CompSt •

    $default  reduce using rule 33 (Stmt)


State 51

   29 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 79


State 52

   30 StmtList: Stmt • StmtList

    error   shift, and go to state 40
    INT     shift, and go to state 41
    FLOAT   shift, and go to state 42
    ID      shift, and go to state 43
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45
    LP      shift, and go to state 46
    LC      shift, and go to state 10
    RETURN  shift, and go to state 47
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 50
    StmtList  go to state 80
    Stmt      go to state 52
    Exp       go to state 53


State 53

   32 Stmt: Exp • SEMI
   40     | Exp • error
   53 Exp: Exp • ASSIGNOP Exp
   54    | Exp • AND Exp
   55    | Exp • OR Exp
   56    | Exp • RELOP Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • STAR Exp
   60    | Exp • DIV Exp
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   71    | Exp • ASSIGNOP error
   72    | Exp • AND error
   73    | Exp • OR error
   74    | Exp • RELOP error
   75    | Exp • PLUS error
   76    | Exp • MINUS error
   77    | Exp • STAR error
   78    | Exp • DIV error
   84    | Exp • LB error RB

    error     shift, and go to state 81
    SEMI      shift, and go to state 82
    DOT       shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    LB        shift, and go to state 92


State 54

   44 DefList: Def DefList •

    $default  reduce using rule 44 (DefList)


State 55

   16 StructSpecifier: STRUCT OptTag LC DefList • RC
   18                | STRUCT OptTag LC DefList • error RC

    error  shift, and go to state 93
    RC     shift, and go to state 94


State 56

   25 FunDec: ID LP RP •

    $default  reduce using rule 25 (FunDec)


State 57

   28 ParamDec: Specifier • VarDec

    ID  shift, and go to state 36

    VarDec  go to state 95


State 58

   24 FunDec: ID LP VarList • RP

    RP  shift, and go to state 96


State 59

   26 VarList: ParamDec • COMMA VarList
   27        | ParamDec •

    COMMA  shift, and go to state 97

    $default  reduce using rule 27 (VarList)


State 60

   13 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 13 (ExtDecList)


State 61

   23 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 98


State 62

   48 Def: Specifier error SEMI •

    $default  reduce using rule 48 (Def)


State 63

   52 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 99


State 64

   47 Def: Specifier DecList error • SEMI

    SEMI  shift, and go to state 100


State 65

   46 Def: Specifier DecList SEMI •

    $default  reduce using rule 46 (Def)


State 66

   50 DecList: Dec COMMA • DecList

    ID  shift, and go to state 36

    VarDec   go to state 37
    DecList  go to state 101
    Dec      go to state 39


State 67

   38 Stmt: error SEMI •

    $default  reduce using rule 38 (Stmt)


State 68

   39 Stmt: error Stmt •

    $default  reduce using rule 39 (Stmt)


State 69

   64 Exp: ID LP • Args RP
   65    | ID LP • RP
   83    | ID LP • error RP

    error  shift, and go to state 102
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46
    RP     shift, and go to state 103

    Exp   go to state 104
    Args  go to state 105


State 70

   81 Exp: MINUS error •

    $default  reduce using rule 81 (Exp)


State 71

   53 Exp: Exp • ASSIGNOP Exp
   54    | Exp • AND Exp
   55    | Exp • OR Exp
   56    | Exp • RELOP Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • STAR Exp
   60    | Exp • DIV Exp
   62    | MINUS Exp •
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   71    | Exp • ASSIGNOP error
   72    | Exp • AND error
   73    | Exp • OR error
   74    | Exp • RELOP error
   75    | Exp • PLUS error
   76    | Exp • MINUS error
   77    | Exp • STAR error
   78    | Exp • DIV error
   84    | Exp • LB error RB

    DOT  shift, and go to state 83
    LB   shift, and go to state 92

    $default  reduce using rule 62 (Exp)


State 72

   82 Exp: NOT error •

    $default  reduce using rule 82 (Exp)


State 73

   53 Exp: Exp • ASSIGNOP Exp
   54    | Exp • AND Exp
   55    | Exp • OR Exp
   56    | Exp • RELOP Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • STAR Exp
   60    | Exp • DIV Exp
   63    | NOT Exp •
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   71    | Exp • ASSIGNOP error
   72    | Exp • AND error
   73    | Exp • OR error
   74    | Exp • RELOP error
   75    | Exp • PLUS error
   76    | Exp • MINUS error
   77    | Exp • STAR error
   78    | Exp • DIV error
   84    | Exp • LB error RB

    DOT  shift, and go to state 83
    LB   shift, and go to state 92

    $default  reduce using rule 63 (Exp)


State 74

   79 Exp: LP error • RP

    RP  shift, and go to state 106


State 75

   53 Exp: Exp • ASSIGNOP Exp
   54    | Exp • AND Exp
   55    | Exp • OR Exp
   56    | Exp • RELOP Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • STAR Exp
   60    | Exp • DIV Exp
   61    | LP Exp • RP
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   71    | Exp • ASSIGNOP error
   72    | Exp • AND error
   73    | Exp • OR error
   74    | Exp • RELOP error
   75    | Exp • PLUS error
   76    | Exp • MINUS error
   77    | Exp • STAR error
   78    | Exp • DIV error
   80    | LP Exp • error
   84    | Exp • LB error RB

    error     shift, and go to state 107
    DOT       shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    RP        shift, and go to state 108
    LB        shift, and go to state 92


State 76

   34 Stmt: RETURN Exp • SEMI
   53 Exp: Exp • ASSIGNOP Exp
   54    | Exp • AND Exp
   55    | Exp • OR Exp
   56    | Exp • RELOP Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • STAR Exp
   60    | Exp • DIV Exp
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   71    | Exp • ASSIGNOP error
   72    | Exp • AND error
   73    | Exp • OR error
   74    | Exp • RELOP error
   75    | Exp • PLUS error
   76    | Exp • MINUS error
   77    | Exp • STAR error
   78    | Exp • DIV error
   84    | Exp • LB error RB

    SEMI      shift, and go to state 109
    DOT       shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    LB        shift, and go to state 92


State 77

   35 Stmt: IF LP • Exp RP Stmt
   36     | IF LP • Exp RP Stmt ELSE Stmt
   41     | IF LP • error RP Stmt
   42     | IF LP • error RP Stmt ELSE Stmt

    error  shift, and go to state 110
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 111


State 78

   37 Stmt: WHILE LP • Exp RP Stmt
   43     | WHILE LP • error RP Stmt

    error  shift, and go to state 112
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 113


State 79

   29 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 29 (CompSt)


State 80

   30 StmtList: Stmt StmtList •

    $default  reduce using rule 30 (StmtList)


State 81

   40 Stmt: Exp error •

    $default  reduce using rule 40 (Stmt)


State 82

   32 Stmt: Exp SEMI •

    $default  reduce using rule 32 (Stmt)


State 83

   67 Exp: Exp DOT • ID

    ID  shift, and go to state 114


State 84

   53 Exp: Exp ASSIGNOP • Exp
   71    | Exp ASSIGNOP • error

    error  shift, and go to state 115
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 116


State 85

   56 Exp: Exp RELOP • Exp
   74    | Exp RELOP • error

    error  shift, and go to state 117
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 118


State 86

   57 Exp: Exp PLUS • Exp
   75    | Exp PLUS • error

    error  shift, and go to state 119
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 120


State 87

   58 Exp: Exp MINUS • Exp
   76    | Exp MINUS • error

    error  shift, and go to state 121
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 122


State 88

   59 Exp: Exp STAR • Exp
   77    | Exp STAR • error

    error  shift, and go to state 123
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 124


State 89

   60 Exp: Exp DIV • Exp
   78    | Exp DIV • error

    error  shift, and go to state 125
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 126


State 90

   54 Exp: Exp AND • Exp
   72    | Exp AND • error

    error  shift, and go to state 127
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 128


State 91

   55 Exp: Exp OR • Exp
   73    | Exp OR • error

    error  shift, and go to state 129
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 130


State 92

   66 Exp: Exp LB • Exp RB
   84    | Exp LB • error RB

    error  shift, and go to state 131
    INT    shift, and go to state 41
    FLOAT  shift, and go to state 42
    ID     shift, and go to state 43
    MINUS  shift, and go to state 44
    NOT    shift, and go to state 45
    LP     shift, and go to state 46

    Exp  go to state 132


State 93

   18 StructSpecifier: STRUCT OptTag LC DefList error • RC

    RC  shift, and go to state 133


State 94

   16 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 16 (StructSpecifier)


State 95

   23 VarDec: VarDec • LB INT RB
   28 ParamDec: Specifier VarDec •

    LB  shift, and go to state 33

    $default  reduce using rule 28 (ParamDec)


State 96

   24 FunDec: ID LP VarList RP •

    $default  reduce using rule 24 (FunDec)


State 97

   26 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 57
    StructSpecifier  go to state 8
    VarList          go to state 134
    ParamDec         go to state 59


State 98

   23 VarDec: VarDec LB INT RB •

    $default  reduce using rule 23 (VarDec)


State 99

   52 Dec: VarDec ASSIGNOP Exp •
   53 Exp: Exp • ASSIGNOP Exp
   54    | Exp • AND Exp
   55    | Exp • OR Exp
   56    | Exp • RELOP Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • STAR Exp
   60    | Exp • DIV Exp
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   71    | Exp • ASSIGNOP error
   72    | Exp • AND error
   73    | Exp • OR error
   74    | Exp • RELOP error
   75    | Exp • PLUS error
   76    | Exp • MINUS error
   77    | Exp • STAR error
   78    | Exp • DIV error
   84    | Exp • LB error RB

    DOT       shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    LB        shift, and go to state 92

    $default  reduce using rule 52 (Dec)


State 100

   47 Def: Specifier DecList error SEMI •

    $default  reduce using rule 47 (Def)


State 101

   50 DecList: Dec COMMA DecList •

    $default  reduce using rule 50 (DecList)


State 102

   83 Exp: ID LP error • RP
   87 Args: error • COMMA Exp

    COMMA  shift, and go to state 135
    RP     shift, and go to state 136


State 103

   65 Exp: ID LP RP •

    $default  reduce using rule 65 (Exp)


State 104

   53 Exp: Exp • ASSIGNOP Exp
   54    | Exp • AND Exp
   55    | Exp • OR Exp
   56    | Exp • RELOP Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • STAR Exp
   60    | Exp • DIV Exp
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   71    | Exp • ASSIGNOP error
   72    | Exp • AND error
   73    | Exp • OR error
   74    | Exp • RELOP error
   75    | Exp • PLUS error
   76    | Exp • MINUS error
   77    | Exp • STAR error
   78    | Exp • DIV error
   84    | Exp • LB error RB
   85 Args: Exp • COMMA Args
   86     | Exp •

    COMMA     shift, and go to state 137
    DOT       shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    LB        shift, and go to state 92

    $default  reduce using rule 86 (Args)


State 105

   64 Exp: ID LP Args • RP

    RP  shift, and go to state 138


State 106

   79 Exp: LP error RP •

    $default  reduce using rule 79 (Exp)


State 107

   80 Exp: LP Exp error •

    $default  reduce using rule 80 (Exp)


State 108

   61 Exp: LP Exp RP •

    $default  reduce using rule 61 (Exp)


State 109

   34 Stmt: RETURN Exp SEMI •

    $default  reduce using rule 34 (Stmt)


State 110

   41 Stmt: IF LP error • RP Stmt
   42     | IF LP error • RP Stmt ELSE Stmt

    RP  shift, and go to state 139


State 111
